# advent-of-code

./: .editorconfig  .gitignore  AoC.sln  AoC.sln.DotSettings  README.md
2016/aoc/: install  pyproject.toml
2016/aoc/day1/: day1.results.txt  day1.solver.py
2016/aoc/day10/: day10.results.txt  day10.solver.py
2016/aoc/day11/: day11.results.txt  day11.solver.py
2016/aoc/day12/: day12.results.txt  day12.solver.py
2016/aoc/day13/: day13.results.txt  day13.solver.py
2016/aoc/day14/: day14.results.txt  day14.solver.py
2016/aoc/day15/: day15.results.txt  day15.solver.py  notes.txt
2016/aoc/day16/: day16.results.txt  day16.solver.py
2016/aoc/day17/: day17.input.txt  day17.results.txt  day17.solver.py
2016/aoc/day18/: day18.results.txt  day18.solver.py
2016/aoc/day19/: day19.results.txt  day19.solver.py
2016/aoc/day2/: day2.results.txt  day2.solver.py
2016/aoc/day20/: day20.results.txt  day20.solver.py
2016/aoc/day21/: day21.results.txt  day21.solver.py
2016/aoc/day22/: day22.results.txt  day22.solver.py
2016/aoc/day23/: day23.input.txt  day23.results.txt  day23.solver.py  disasm.txt
2016/aoc/day24/: day24.results.txt  day24.solver.py
2016/aoc/day25/: day25.results.txt  day25.solver.py  disasm.txt
2016/aoc/day3/: day3.results.txt  day3.solver.py
2016/aoc/day4/: day4.results.txt  day4.solver.py
2016/aoc/day5/: day5.results.txt  day5.solver.py
2016/aoc/day6/: day6.results.txt  day6.solver.py
2016/aoc/day7/: day7.results.txt  day7.solver.py
2016/aoc/day8/: day8.results.txt  day8.solver.py
2016/aoc/day9/: day9.results.txt  (+1 more)
(+699 files in other folders)
