[tool.poetry]
name = "scobi-aoc2016"
version = "1.0"
description = ""
authors = ["Scott Bilas"]

[tool.poetry.dependencies]
python = "^3.8"
pipe = "^1.6.0"
Pillow = "*" # 7 series had vulnerabilities according to github
pytesseract = "^0.3.2"
iteration_utilities = "^0.10.1"

[tool.poetry.dev-dependencies]
pudb = "^2019.2"
